# Journey-of-Crafted-Insights

./: .pre-commit-config.yaml  README.md  pyproject.toml
.obsidian/: types.json  workspace.json
AI/Infra/: 910b-cookbook.md
AI/LLMs/: LLMs.md
AI/LLMs/Applications/: Agent.md
AI/LLMs/Data/: Selection.md
AI/LLMs/Train/: CT.md  Pretrain.md  SFT.md
AI/LLMs/Train-Stage/: CT.md  SFT.md
AI/LLMs/Workshop/: Agent.md  Merge.md
Tools/git/: worktree.md
