[tool.poetry]
name = "journey-of-crafted-insights"
version = "0.1.0"
description = "Capturing insights and experiments from my ongoing learning in AI, algorithms, and development tools."
authors = ["zyz <zyzkyrie@outlook.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
